2005-10-26 Raphael Neider <rneider AT web.de>

	* src/SDCCsymt.c (compStructSize): allow signed bitfields for PIC ports
	* src/pic16/gen.c (genUnpackBits): support signed bitfields,
	  (genAssign): emit warning when casting literals to generic pointer
	    type, also applies when taking the address of a fixed variable,
	  (genCast): improved casting to generic pointers
	* src/pic16/glue.c (pic16emitStaticSeg): fixed(?) handling of fixed
	  extern variables, added verbose error message
	* device/include/pic16/{string.h,errno.h}: added #pragma library c
	
2005-10-26 Bernhard Held <bernhard AT bernhardheld.de>

	* src/mcs51/gen.c (genMinus): fixed bug 1270906: reverse subtraction,
	carry must be complemented too
	* src/mcs51/peeph.def: addded rule 262 to remove double cpl c, which
	could be emitted by genMinus
	* src/SDCCval.c (constVal): fixed bug 1305065

2005-10-25 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (addCast): added promotion for bit variables
	(decorateType): emit W_COMPLEMENT before the problem vanishes behind
	promotion casts + optimisation
	(optimizeGetWord): fix warning 'i' might be used uninitialized
	* src/mcs51/gen.c (genCpl): removed W_COMPLEMENT
	* src/ds390/gen.c (genCpl): removed W_COMPLEMENT

2005-10-24 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCicode.c (ast2iCode): reverted to 1.224 because of regression:
	all chars are promoted to int; promotion should be handled in SDCCast.c

2005-10-15 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/lib/_strcmp.c: Fixed bug 1326457

2005-10-11 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libio/i2c.ignore: added 1320, fixes broken builds
	* device/lib/pic16/libdev/pic18f1320.c: added 1320's device library

2005-10-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCC.y (AT): fixed bug with sfr32 addresses when built with GCC
	* support/regression/tests/sfr16.c: added test for the sfr32 bug

2005-10-04 Raphael Neider <rneider AT web.de>
